--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <script src="p5.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
 
   <script src="p5.sound.min.js"></script>
   <script src="p5.collide2d.min.js"></script>
@@ -14,9 +15,10 @@
 </head>
 
 <body>
-  <h1>
-    <p><a href="https://wuguoxun.github.io/gameMod/">Restart</a></p>
-  </h1>
+  <h2>SPACE TO JUMP</h2>
+  <h2>BECAREFUL THE SAW</h2>
+  <button type="button" onclick="location.reload();" class="reloadButton">RESTART</button><br>
+
 
 
 </body>
